objects/PC_ReminderLog__c.object
<CustomObject>
    <description>Logs are stored in this object when a reminder is sent.</description>
    <fields>
        <fullName>PC_ExternalID__c</fullName>
        <description>External ID that stores the reminder log custom uniqueness for future reference.</description>
        <inlineHelpText>External ID that stores the reminder log custom uniqueness for future reference.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ReminderContent__c</fullName>
        <description>Stores content of reminder that is sent to recipient.</description>
        <inlineHelpText>Stores content of reminder that is sent to recipient.</inlineHelpText>
        <label>Reminder Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PC_ReminderQueue__c</fullName>
        <description>Queue Record ID for which the log got created.</description>
        <inlineHelpText>Queue Record ID for which the log got created.</inlineHelpText>
        <label>Reminder Queue</label>
        <referenceTo>PC_ReminderQueue__c</referenceTo>
        <relationshipLabel>Reminder Logs</relationshipLabel>
        <relationshipName>Reminder_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_SalesforceID__c</fullName>
        <description>Stores the salesforce record id of any object.</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Record Id is stored in this field for reference when needed.</inlineHelpText>
        <label>Salesforce ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_StatusDetails__c</fullName>
        <description>Status Details is for storing information about a transaction of processing reminder queue.</description>
        <inlineHelpText>Status Details is for storing information about a transaction of processing reminder queue.</inlineHelpText>
        <label>Status Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>Status of the reminder when it is processed in Batch Class</description>
        <inlineHelpText>Status of the reminder when it is processed in Batch Class</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
                <value>
                    <fullName>UNPROCESSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reminder Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Reminder Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>